--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ log = { version = "0.4.4", default-features = false, optional = true }
 libc = { version = "0.2.18", optional = true }
 bitflags = { version = "1.0", default-features = false }
 defmt = { version = "0.2.0", optional = true }
+crossbeam = { version = "*" }
+bytes = "*"
 
 [dev-dependencies]
 env_logger = "0.5"
