--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ libc = { version = "0.2.18", optional = true }
 bitflags = { version = "1.0", default-features = false }
 defmt = { version = "0.2.0", optional = true }
 crossbeam = { version = "*" }
-bytes = "*"
+backtrace = "0.3"
 
 [dev-dependencies]
 env_logger = "0.5"
