--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ bitflags = { version = "1.0", default-features = false }
 defmt = { version = "0.2.0", optional = true }
 crossbeam = { version = "*" }
 backtrace = "0.3"
+shared_arena = "0.8"
 
 [dev-dependencies]
 env_logger = "0.5"
