--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,6 +67,8 @@ default = [
   "async"
 ]
 
+slow_buffer_sync = []
+
 # experimental; do not use; no guarantees provided that this feature will be kept
 "rust-1_28" = []
 
